@@ -14,10 +14,10 @@ host=localhost
 port=3306
 
 [cloud_analytics]
-interval=5
+interval=60
 
 [cloud_analytics.plugins]
-collector=test
+collector=test,test2
 reporter=test
 
 [machines_control]
@@ -27,7 +27,7 @@ baseline=10
 vm_optimization=AI_consolidation
 vm_connector=openstack_migration
 pm_optimization=AI_power
-pm_connector=IPMI_power
+pm_connector=IPMI
 
 [plugins.openstack]
 openstack_auth_url=http://
